package app.domain.mappers;public class ParameterCategoryMapper {
}
