package auth.domain.store;

public class TestTypeStore {
}
